kubernetes/apps/home-system/matrix/synapse/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: matrix-synapse
spec:
  description: "Network policy for Matrix Synapse"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-synapse
  ingress:
    # Allow same namespace traffic (bridges)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
  egress:
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
    # Allow access to PostgreSQL
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow access to Redis
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # Allow public internet access (Federation)
    - toEntities:
        - world
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
